added stack utils